<resources>
    <string name="app_name">Vintage</string>
    <string name="bold_app_name"><b>Vintage</b></string>
    <string name="something_else">Something Else</string>
    <string name="matchbox_cars">Matchbox Cars</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="model">Model: </string>
    <string name="name">Name: </string>
    <string name="variation">Variation: </string>
    <string name="series_number">Series Number: </string>
    <string name="year">Year: </string>
    <string name="scarcity">Scarcity: </string>
    <string name="original_price">Original Price: </string>
    <string name="current_price">Current Price: </string>
    <string name="description">Description: </string>
    <string name="sources">Sources: </string>
    <string name="unknown">UNKNOWN</string>
</resources>
