<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vintage_item_spec"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vintage.vintage.VintageItemSpecActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/high_res_test"
                android:id="@+id/item_high_res_image" />
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:background="@color/colorAccent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/vintage_item_name_text"
                            android:text="@string/none"
                            android:background="@color/colorAccent"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/model"
                            android:background="@color/colorAccent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/vintage_model_text"
                            android:text="@string/none"
                            android:background="@color/colorAccent"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/year"
                            android:background="@color/colorAccent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/vintage_item_year_text"
                            android:text="@string/none"
                            android:background="@color/colorAccent"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scarcity"
                            android:background="@color/colorAccent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/vintage_item_scarcity_text"
                            android:text="@string/none"
                            android:background="@color/colorAccent"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/original_price"
                            android:background="@color/colorAccent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/vintage_item_original_price_text"
                            android:text="@string/none"
                            android:background="@color/colorAccent"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/current_price"
                            android:background="@color/colorAccent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/vintage_item_current_price_text"
                            android:text="@string/none"
                            android:background="@color/colorAccent"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/series_number"
                            android:background="@color/colorAccent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/vintage_item_series_number_text"
                            android:text="@string/none"
                            android:background="@color/colorAccent"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/variation"
                            android:background="@color/colorAccent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/vintage_item_variation_text"
                            android:text="@string/none"
                            android:background="@color/colorAccent"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:background="@color/colorAccent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/vintage_item_description_text"
                            android:text="@string/none"
                            android:background="@color/colorAccent"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sources"
                            android:background="@color/colorAccent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/vintage_item_sources_text"
                            android:text="@string/none"
                            android:background="@color/colorAccent"/>
                    </TableRow>
                </TableLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
